# BobsShop

./: .gitignore  README.md  main.tf
inventory_service/: .gitignore  build_and_package.sh  pyproject.toml
inventory_service/inventory_service/inventory_item/: __init__.py  model.py  service.py
inventory_service/lambda_functions/get_inventory_item/: index.py
inventory_service/tests/component/: test_inventory_items.py
src/: hello2.py  index.py
terraform/: .terraform.lock.hcl  main.tf
terraform/modules/lambda/: main.tf  variables.tf
terraform/modules/storage/: main.tf
