[tool.poetry]
name = "inventory_service"
version = "0.1.0"
description = ""
authors = ["Axel Almquist <axel@almquist.io>"]

[tool.poetry.dependencies]
python = "3.9.16"
pydantic = "1.10.4"

[tool.poetry.dev-dependencies]
black = "23.1.0"
isort = "5.12.0"
mypy = "^1.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
